syntax = "proto3";

package com.coralogixapis.dashboards.v1.services;

import "com/coralogix/common/v1/audit_log.proto";
import "com/coralogixapis/dashboards/v1/ast/dashboard.proto";
import "google/protobuf/descriptor.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

service DashboardsService {
  rpc CreateDashboard(CreateDashboardRequest) returns (CreateDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "create dashboard";
    option (google.api.http) = {
      post: "/dashboards"
      body: "*"
    };
  }

  rpc ReplaceDashboard(ReplaceDashboardRequest) returns (ReplaceDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "replace dashboard";
    option (google.api.http) = {
      put: "/dashboards"
      body: "*"
    };
  }

  rpc DeleteDashboard(DeleteDashboardRequest) returns (DeleteDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "delete dashboard";
    option (google.api.http) = {
      delete: "/dashboards/{dashboard_id}"
    };
  }

  rpc GetDashboard(GetDashboardRequest) returns (GetDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "get dashboard";
    option (google.api.http) = {
      get: "/dashboards/{dashboard_id}"
    };
  }

  rpc PinDashboard(PinDashboardRequest) returns (PinDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "pin dashboard";
    option (google.api.http) = {
      patch: "/dashboards/{dashboard_id}:pin"
      body: "*"
    };
  }

  rpc UnpinDashboard(UnpinDashboardRequest) returns (UnpinDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "unpin dashboard";
    option (google.api.http) = {
      patch: "/dashboards/{dashboard_id}:unpin"
      body: "*"
    };
  }

  rpc ReplaceDefaultDashboard(ReplaceDefaultDashboardRequest) returns (ReplaceDefaultDashboardResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "replace default dashboard";
    option (google.api.http) = {
      put: "/dashboards/{dashboard_id}/default"
      body: "*"
    };
  }

  rpc AssignDashboardFolder(AssignDashboardFolderRequest) returns (AssignDashboardFolderResponse) {
    option (com.coralogix.common.v1.audit_log_description).description = "assign a dashboard to a folder";
    option (google.api.http) = {
      post: "/dashboards/{dashboard_id}/folder"
      body: "*"
    };
  }
}

message CreateDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  ast.Dashboard dashboard = 2;
}

message CreateDashboardResponse {
  google.protobuf.StringValue dashboard_id = 1;
}

message ReplaceDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  ast.Dashboard dashboard = 2;
}

message ReplaceDashboardResponse {}

message DeleteDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue dashboard_id = 2;
}

message DeleteDashboardResponse {}

message GetDashboardRequest {
  google.protobuf.StringValue dashboard_id = 1;
}

message GetDashboardResponse {
  ast.Dashboard dashboard = 1;

  google.protobuf.Timestamp updated_at = 2;
}

message PinDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue dashboard_id = 2;
}

message PinDashboardResponse {}

message UnpinDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue dashboard_id = 2;
}

message UnpinDashboardResponse {}

message ReplaceDefaultDashboardRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue dashboard_id = 2;
}

message ReplaceDefaultDashboardResponse {}

message AssignDashboardFolderRequest {
  google.protobuf.StringValue request_id = 1;
  google.protobuf.StringValue dashboard_id = 2;
  google.protobuf.StringValue folder_id = 3; // could be null to assign the dashboard to root
}

message AssignDashboardFolderResponse {}
